--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,56 @@
  *= require_tree .
  *= require_self
  */
+body{
+    margin: 0;
+    padding: 0;
+}
+
+.warning-model{
+    position: absolute;
+    top: 200px;
+    width: 100%;
+    height: 50px;
+    z-index: 998;
+}
+.warning-model .warning{
+    margin: auto;
+    width: 150px;
+    height: 70px;
+    background-color: #000000;
+    opacity: 0.5;
+    color: white;
+    line-height: 70px;
+    text-align: center;
+    font-size: 16px;
+    border-radius: 5px;
+}
+
+.head_tag{
+    background-color: black;
+    height: 50px;
+    line-height: 50px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.head_left{
+    float: left;
+    margin-left: 50px;
+}
+
+.head_right{
+    float: right;
+    margin-right: 20px;
+}
+
+.head_button{
+    font-size: 16px;
+    height: 49px;
+    width: 100px;
+    margin: 0;
+    padding: 0 10px;
+    border: 0;
+    background-color: black;
+    color: #ffffff;
+}
