--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,13 +1,18 @@
-<%= javascript_include_tag 'note' %>
+<%= javascript_include_tag 'main/main.js' %>
 <%= render "main/head" %>
 
 <button onclick="jump_page('/note_info/index')"> note_info</button>
 <button onclick="jump_page('/note_info/get_note')"> note_info</button>
 
 <% @get_notes.each do |get_note| %>
-    <div class="" onclick="get_note_id(<%= get_note.id %>)">
-      <p><%= get_note.content %></p>
-      <img src="<%= get_note.note_photo %>">
-      <button onclick="delete_note(<%= get_note.id %>)">shanchu</button>
+    <div class="" onclick="">
+      <span class=""><%= get_note[1].name %></span>
+      <span class=""><%= get_note[1].sex %></span>
     </div>
+    <div class="" onclick="get_note_id(<%= get_note[0].id %>)">
+      <p><%= get_note[0].content %></p>
+      <img src="<%= get_note[0].note_photo %>">
+    </div>
+    <button onclick="delete_note(<%= get_note[0].id %>)">shanchu</button>
+
 <% end %>
