用户信息页面已经完成

--- a/app/views/main/_head.html.erb
+++ b/app/views/main/_head.html.erb
@@ -1,3 +1,4 @@
+
 <div class="head_tag">
   <div class="head_left">
     <button class="head_button" onclick="jump_page('/')">帖子中心</button>
@@ -5,7 +6,7 @@
     <button class="head_button" onclick="jump_page('/user_center/index')">用户中心</button>
   </div>
   <div class="head_right">
-    <button class="head_button" onclick="jump_page('/land/index')">登陆</button>
+    <button id="land_success" class="head_button" onclick="jump_page('/land/index')">登陆</button>
     <button class="head_button" onclick="jump_page('/land/register')">注册</button>
   </div>
 </div>
