--- a/app/views/user_information/_hobby.html.erb
+++ b/app/views/user_information/_hobby.html.erb
@@ -2,13 +2,14 @@
   <div class="bottom">
     <button onclick="set_hobby()">确定</button>
   </div>
-  <div id="hobby_info">
+  <div style="margin: 20px;" id="hobby_info">
     <% @hobby_infos.each do |hobby_info| %>
         <h3><%= hobby_info[:kind] %></h3>
-        <% hobby_info[:tastes].each_with_index do |taste,index| %>
-            <span id="hobby-<%= hobby_info[:kind] %>-<%= index %>" onclick="get_hobby_info('<%= hobby_info[:kind] %>',<%= index %>)"><%= taste %></span>
-        <% end %>
-
+        <div>
+          <% hobby_info[:tastes].each_with_index do |taste,index| %>
+              <span  class="border" id="hobby-<%= hobby_info[:kind] %>-<%= index %>" onclick="get_hobby_info('<%= hobby_info[:kind] %>',<%= index %>)"><%= taste %></span>
+          <% end %>
+        </div>
     <% end %>
   </div>
 </div>
