--- a/app/views/land/index.html.erb
+++ b/app/views/land/index.html.erb
@@ -1,4 +1,5 @@
 <%= javascript_include_tag 'land/index.js' %>
+<%= render 'main/head' %>
 <%= stylesheet_link_tag 'land/index.css' %>
 <body class="body">
 <div class="land_main">
