--- a/app/views/user_information/_address.html.erb
+++ b/app/views/user_information/_address.html.erb
@@ -1,13 +1,13 @@
 <div id="address_list" class="user_information_control" style="display:none">
-  <div class="bottom">
-    <button onclick="set_address()">确定</button>
-  </div>
-  <div id="address_info">
+  <div style="margin: 20px 20px 60px 20px;" id="address_info">
     <% @address_infos.each do |address_info| %>
         <h3><%= address_info[:province] %></h3>
         <% address_info[:address].each_with_index do |address,index| %>
-            <span id="address-<%= address_info[:province] %>-<%= index %>" onclick="get_address_info('<%= address_info[:province] %>',<%= index %>)"><%= address %></span>
+            <span class="border"  id="address-<%= address_info[:province] %>-<%= index %>" onclick="get_address_info('<%= address_info[:province] %>',<%= index %>)"><%= address %></span>
         <% end %>
     <% end %>
+    </div>
+  <div style="text-align: initial">
+    <button style="position: fixed;bottom: 0;width: 500px;background-color: #2ab7ed;" class="confirm_button" onclick="set_address()">确定</button>
   </div>
 </div>
