--- a/app/views/user_information/index.html.erb
+++ b/app/views/user_information/index.html.erb
@@ -8,17 +8,28 @@
   <div class="tags">
     <div class="tag">
       <span>名字</span>
+      <span id="name" onclick="set_name()" style="float: right;margin-right: 30px;">无</span>
+      <input onchange="get_name(this.value)" style="float: right;display: none;margin-right: 30px;margin-top: 20px;" type="text" id="input_name" />
     </div>
   </div>
   <div class="tags">
     <div class="tag">
       <span>性别</span>
+      <span id="sex" style="float: right;margin-right: 30px;width: 14px;" onclick="set_sex()">男</span>
+      <from id="sex_list" style="display: none;float: right;margin-right: 30px;">
+        <select onchange="get_sex(this.value)">
+          <option >无</option>
+          <option value="男" >男</option>
+          <option value="女" >女</option>
+        </select>
+      </from>
     </div>
   </div>
   <div class="tags">
     <div class="tag">
       <span>生日</span>
-      <input style="float: right;margin-top: 14px;" id="date_birth" type="date" />
+      <span id="date_birth" style="float: right; margin-right: 30px;" onclick="set_date()"></span>
+      <input style="display: none;float: right;margin-top: 14px;" id="date" type="date" value="1995-07-15"/>
     </div>
   </div>
   <div class="tags">
@@ -77,12 +88,10 @@
     </div>
   </div>
   <div class="tags">
-    <div class="image_width" onclick="get_photo()">
-      <%= image_tag "arrow_right",:class => 'right_image' %>
-      <span id="photo"></span>
-    </div>
     <div class="tag">
       <span>电话</span>
+      <span id="photo" onclick="set_photo()" style="float: right;margin-right: 30px;">11111111111</span>
+      <input onchange="get_photo(this.value)" type="text" id="input_photo" style="display: none;float: right;margin-right: 30px;line-height: 20px;margin-top: 10px;width: 90px;" />
     </div>
   </div>
   <button class="confirm_button" onclick="set_user_information()">保存信息</button>
