--- a/app/views/user_information/index.html.erb
+++ b/app/views/user_information/index.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag 'user_informations/user_information.css' %>
 <%= javascript_include_tag "user_informations/user_information.js" %>
-<body class="user_information_main">
+<div class="user_information_main">
 <div id="user_info_list" class="user_information_control">
   <div>
     <span>基本信息</span>
@@ -103,4 +103,4 @@
 <%= render 'user_information/hobby' %>
 <%= render 'user_information/star' %>
 <%= render 'user_information/work' %>
-</body>
+</div>
