--- a/app/assets/stylesheets/user_center/user_center.css
+++ b/app/assets/stylesheets/user_center/user_center.css
@@ -39,6 +39,16 @@
     background-color: #CCCCCC;
 }
 
+.upload_image{
+    margin-top: 10px;
+    width: 60px;
+    height: 60px;
+    background-color: #CCCCCC;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+}
+
 .margin-left-20{
     margin-left: 20px;
 }
@@ -51,5 +61,39 @@
 }
 .font-color{
     color: #887878;;
+}
+
+.upload_image_fram{
+    display: none;
+    width: 200px;
+    height: 300px;
+    position: relative;
+    bottom: 400px;
+    left: 140px;
+    background-color: #e4edef;
+    z-index: 10;
+}
+.close_button{
+    margin-right: 5px;
+    margin-top: 5px;
+    float: right;
+    border: 0;
+    font-size: 20px;
+    background-color: #e4edef;
+}
+
+.choose_button{
+    width: 70px;
+}
+
+.upload_button{
+    width: 100px;
+    position: absolute;
+    bottom: 20px;
+    border-radius: 10px;
+    background-color: #65b5c5;
+    right: 43px;
+    line-height: 30px;
+    font-size: 16px;
 }
 
