--- a/app/assets/stylesheets/main/main.css
+++ b/app/assets/stylesheets/main/main.css
@@ -18,7 +18,7 @@
 .note_image{
     width: 460px;
     height: 300px;
-    float: left;
+    text-align: left;
     margin:10px 20px;
 
 }
@@ -28,9 +28,50 @@
     padding: 10px 0 10px 0;
     border-bottom: 1px solid #151313;
 }
+
+.comment_fram{
+    text-align: left;
+    margin-left: 20px;
+    padding-bottom: 10px;
+    height: 30px;
+}
+
+.margin-right-20{
+    margin-right: 20px;
+}
 .icon{
-    background-image: url('/icon.png');
-    background-position: 15px 20px;
     width: 16px;
-    height: 16px
+    height: 16px;
+}
+
+.icon_fram{
+    border: 2px solid #151313;
+    width: 60px;
+    float: right;
+    text-align: center;
+}
+
+.comment_input_fram{
+    border: 2px solid #151313;
+    margin: 0 20px;
+    height: 70px;
+    display: none;
+}
+.comment_input_fram textarea{
+    float: left;
+    width: 390px;
+    background-color: #2e2f30;
+    color: #ffffff;
+    padding: 8px;
+    border: 0;
+    border-right: 2px solid #141315;
+}
+.comment_input_fram button{
+    border: 0;
+    padding: 0;
+    width: 48px;
+    font-size: 26px;
+    height: 70px;
+    background-color: #2e2f30;
+    color: #ffffff;
 }
