--- a/app/views/note_info/get_note.html.erb
+++ b/app/views/note_info/get_note.html.erb
@@ -1,8 +1,70 @@
+<%= stylesheet_link_tag 'main/main.css' %>
+<%= javascript_include_tag 'main/main.js' %>
+<%= javascript_include_tag 'note_info/note_info.js' %>
+<%= stylesheet_link_tag 'note_info/note_info.css' %>
 
 <%= render 'main/head' %>
+<body class="main_background">
+<div style="text-align: center;color: #ffffff;">
+  <div class="currency_frame" style="padding-bottom: 35px">
+    <div class="note_fram">
+      <div class="head_info_fram">
+        <img src="<%= @note_user_info.user_image %>" class="head_image">
+        <div  class="" onclick="">
+          <span class="left"><%= @note_user_info.name %></span>
+          <span class="left"><%= @note_user_info.sex %></span>
+          <br/>
+        </div>
+        <div>
+          <br/>
+          <span class="left"><%= @get_note.created_at %></span>
+        </div>
+      </div>
+      <div class="" >
+        <p class="note_content"><%= @get_note.content %></p>
+        <img class="note_image " src="<%= @get_note.note_photo %>">
+      </div>
+
+     <div class="comment_main_fram">
+       <% @get_comment.each_with_index do |comment,index| %>
+           <div class="show_comment_fram">
+             <div class="head_info_fram" style="border: 0;">
+               <img src="<%= comment[1].user_image %>" class="comment_head_image">
+               <div  class="" onclick="">
+                 <span class="left margin-left-5"><%= comment[1].name %></span>
+                 <span class="left margin-left-5"><%= comment[1].sex %></span>
+                 <br/>
+               </div>
+               <div>
+                 <br/>
+                 <span class="left margin-left-5"><%= comment[0].created_at %></span>
+               </div>
+               <div style="float: right;margin-right: 20px">
+                 <span  onclick="get_comment_fram(<%= comment[0].id %>)">回复</span>
+               </div>
+             </div>
+             <div class="comment_content margin-left-20">
+               <span style="margin-left: 55px;width: 300px;"><%= comment[0].comment_content %></span>
+             </div>
+           </div>
+       <% end %>
+     </div>
+    </div>
+    <div tabindex="1" id="change_comment_fram" style="text-align: left" onblur="change()">
+      <button id="comment_button" class="confirm_button" onclick="show_comment_fram(<%= @get_note.id %>)">回复</button>
+      <div style="position: fixed;bottom: 5px;margin: 0;height: 50px;" id="comment_input_fram" class="comment_input_fram">
+        <textarea style="width: 430px;" id="comment" rows="3" ></textarea>
+        <button onclick="get_comment_(<%= @get_note.id %>)">回复</button>
+      </div>
+    </div>
+
+  </div>
+</div>
 
 
-<p><%= @get_note.content %></p>
+
+
+</body>
 
 
 
