修改一下错误

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -25,7 +25,7 @@
             <p class="note_content"><%= get_note[0].content %></p>
             <img class="note_image " src="<%= get_note[0].note_photo %>">
           </div>
-          <!--<button onclick="delete_note(<%= get_note[0].id %>)">shanchu</button>-->
+          <button onclick="delete_note(<%= get_note[0].id %>)">shanchu</button>
           <div class="comment_fram">
             <div  class="margin-right-20 icon_fram">
               <%= image_tag "icon_reply",:class => 'icon' %>
@@ -36,14 +36,12 @@
               <span >评论</span>
             </div>
           </div>
-          <div onfocusout="lose_change()"  id="comment_input_fram<%= get_note[0].id %>" class="comment_input_fram">
-            <textarea id="comment" rows="3" ></textarea>
+          <div id="comment_input_fram<%= get_note[0].id %>" class="comment_input_fram">
+            <textarea id="comment<%= get_note[0].id %>" rows="3" ></textarea>
             <button onclick="get_comment(<%= get_note[0].id %>)">回复</button>
           </div>
           <br/>
         </div>
-
-
     <% end %>
   </div>
 </div>
