--- a/app/views/user_center/index.html.erb
+++ b/app/views/user_center/index.html.erb
@@ -31,7 +31,7 @@
       <span onclick="get_into_hobby()" class="left font-color"><%= @user_info[:hobby] %></span>
     </div>
     <div class="block_frame" style="height: 50px;">
-      <div onclick="jump_page('/user_information/index')">
+      <div onclick="jump_page('/comment/index')">
         <%= image_tag "arrow_right",:class => 'right_image1' %>
       </div>
       <span class="left margin-left-20">评论提醒</span>
