--- a/app/views/user_information/index.html.erb
+++ b/app/views/user_information/index.html.erb
@@ -94,7 +94,7 @@
       <input onchange="get_photo(this.value)" type="text" id="input_photo" style="display: none;float: right;margin-right: 30px;line-height: 20px;margin-top: 10px;width: 90px;" />
     </div>
   </div>
-  <button class="confirm_button" onclick="set_user_information()">保存信息</button>
+  <button class="confirm_button1" onclick="set_user_information()">保存信息</button>
 </div>
 
 <%= render 'user_information/address' %>
