--- a/app/assets/stylesheets/user_informations/user_information.css
+++ b/app/assets/stylesheets/user_informations/user_information.css
@@ -36,8 +36,8 @@
     margin-top: 12.5px;
     margin-right: 20px;
 }
-.confirm_button{
-    width: 100%;
+.confirm_button1{
+    width: 500px;
     line-height: 50px;
     background-color: #1936ed;
     margin: 0;
