--- a/app/assets/stylesheets/comment/comment.css
+++ b/app/assets/stylesheets/comment/comment.css
@@ -27,13 +27,14 @@
 
 }
 .comment_info{
+    line-height: 20px;
     padding: 0 20px 20px 20px;
     text-align: left;
 }
 
 .comment_info img{
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     float: left;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
