--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -10,17 +10,17 @@
     <% @get_notes.each do |get_note| %>
         <div class="note_fram">
           <div class="head_info_fram">
-           <img src="<%= get_note[1].user_image %>" class="head_image">
-           <div  class="" onclick="">
-             <span class="left"><%= get_note[1].name %></span>
-             <span class="left"><%= get_note[1].sex %></span>
-             <br/>
-           </div>
-           <div>
-             <br/>
-             <span class="left"><%= get_note[0].created_at %></span>
-           </div>
-         </div>
+            <img src="<%= get_note[1].user_image %>" class="head_image">
+            <div  class="" onclick="">
+              <span class="left"><%= get_note[1].name %></span>
+              <span class="left"><%= get_note[1].sex %></span>
+              <br/>
+            </div>
+            <div>
+              <br/>
+              <span class="left"><%= get_note[0].created_at.to_s.slice(5,11) %></span>
+            </div>
+          </div>
           <div class="" onclick="get_note_id(<%= get_note[0].id %>)">
             <p class="note_content"><%= get_note[0].content %></p>
             <img class="note_image " src="<%= get_note[0].note_photo %>">
