完成了，评论提醒，个人帖子显示

--- a/app/assets/stylesheets/note_info/note_info.css
+++ b/app/assets/stylesheets/note_info/note_info.css
@@ -37,3 +37,11 @@
     bottom: 0;
 
 }
+.delete_button{
+    float: right;
+    margin: 10px 20px;
+    width: 100px;
+    line-height: 30px;
+    border-radius: 10px;
+
+}
