--- a/app/views/comment/index.html.erb
+++ b/app/views/comment/index.html.erb
@@ -1,5 +1,6 @@
 <%= javascript_include_tag 'comment/comment.js' %>
 <%= stylesheet_link_tag 'comment/comment.css' %>
+<%= render "main/head" %>
 <body class="main_background">
   <div style="text-align: center;color: #ffffff;">
     <div class="currency_frame">
