--- a/app/views/user_information/index.html.erb
+++ b/app/views/user_information/index.html.erb
@@ -1,5 +1,8 @@
 <%= stylesheet_link_tag 'user_informations/user_information.css' %>
 <%= javascript_include_tag "user_informations/user_information.js" %>
+
+<%= render "main/head" %>
+
 <div class="user_information_main">
 <div id="user_info_list" class="user_information_control">
   <div>
