--- a/app/assets/stylesheets/main/main.css
+++ b/app/assets/stylesheets/main/main.css
@@ -75,3 +75,39 @@
     background-color: #2e2f30;
     color: #ffffff;
 }
+
+.from{
+    text-align: left;
+    height: 60px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.from textarea{
+    width: 360px;
+    height: 52px;
+    background-color: #2e2f30;
+    color: #ffffff;
+    float: left;
+    border: 2px solid #000000;
+
+}
+.from div{
+    float: left;
+    height: 56px;
+    line-height: 56px;
+    width: 70px;
+    background-color: #2e2f30;
+    color: #ffffff;
+    border: 2px solid #000000;
+}
+.upload{
+    float: left;
+    width: 58px;
+    margin: 0;
+    height: 60px;
+    border: 2px solid #000000;
+    background-color: #2E2F30;
+    color: #ffffff;
+    font-size: 20px;
+}
