--- a/app/assets/stylesheets/user_center/user_center.css
+++ b/app/assets/stylesheets/user_center/user_center.css
@@ -53,6 +53,13 @@
     margin-left: 20px;
 }
 
+.red_image{
+    width: 25px;
+    height: 25px;
+    float: right;
+    display: block;
+}
+
 .right_image1{
     width: 15px;
     height: 25px;
