--- a/app/views/user_center/index.html.erb
+++ b/app/views/user_center/index.html.erb
@@ -33,6 +33,7 @@
     <div class="block_frame" style="height: 50px;">
       <div onclick="jump_page('/comment/index')">
         <%= image_tag "arrow_right",:class => 'right_image1' %>
+        <img style="display: <%= @is_read == 'false' ? 'block' : 'none' %>;" src="/remind_read_comment.png" class="red_image" />
       </div>
       <span class="left margin-left-20">评论提醒</span>
     </div>
