--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -30,10 +30,10 @@
             <p class="note_content"><%= get_note[0].content %></p>
             <img class="note_image " src="<%= get_note[0].note_photo %>">
           </div>
-          <div class="comment_fram">
+          <div class="comment_fram" onclick="laud(<%= get_note[0].id %>)">
             <div  class="margin-right-20 icon_fram">
-              <%= image_tag "icon_reply",:class => 'icon' %>
-              <span >赞(<span id="favor">0</span>)</span>
+              <span id="laud<%= get_note[0].id %>"><%= get_note[2][1] %></span>
+              (<span id="favor<%= get_note[0].id %>"><%= get_note[2][0] %></span>)
             </div>
             <div class="margin-right-20 icon_fram" onclick="get_comment_fram(<%= get_note[0].id %>)">
               <%= image_tag "reply",:class => 'icon' %>
